--- a/mudle/css/style.css
+++ b/mudle/css/style.css
@@ -152,7 +152,32 @@ input.checkbox:checked:after {
     -o-border-radius: 2px;
     border-radius: 2px;  
 }
+.login-form input[type="file"] {
+    font-size: 1em;
+    color: #fff;
+    background: #E91E63;
+    border: 1px solid #E91E63;
+    outline: none;
+    cursor: pointer;
+    padding: .6em 1em;
+    -webkit-appearance: none;
+    width: 92%;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
+    border-radius: 2px;  
+}
 .login-form input[type="submit"]:hover {
+    background: transparent;
+    color: #E91E63;  
+	transition: 0.5s all ;
+    -webkit-transition: 0.5s all;
+    -moz-transition: 0.5s all;
+    -o-transition: 0.5s all;
+    -ms-transition: 0.5s all;
+} 
+.login-form input[type="file"]:hover {
     background: transparent;
     color: #E91E63;  
 	transition: 0.5s all ;
@@ -416,6 +441,9 @@ input.checkbox:checked:after {
     margin: 3em auto 2em; 
 }
 .login-form input[type="submit"] {
+    font-size: 0.9em; 
+} 
+.login-form input[type="file"] {
     font-size: 0.9em; 
 } 
 }
