--- a/mudle/css/style.css
+++ b/mudle/css/style.css
@@ -474,4 +474,47 @@ input.checkbox:checked:after {
 	border-spacing: 5;
 }
 }
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #111;
+}
+
+.button {
+    background-color: #E91E63; /* Green */
+    border: none;
+    color: white;
+    padding: 3px 16px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+.table {
+    width: 100%;
+    text-align:center;
+}
+.table_productos {
+    width: 100%;
+    text-align:center;
+    height: 300px;
+}
 /*-- //responsive-design --*/
